templates/ctms_template.yaml
---
# Source: ctms/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctms
  labels:
    helm.sh/chart: ctms-0.1.7
    app.kubernetes.io/name: ctms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: ctms
    app.kubernetes.io/instance: release-name
---
# Source: ctms/templates/background_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctms-background
  labels:
    app.kubernetes.io/component: background
    helm.sh/chart: ctms-0.1.7
    app.kubernetes.io/name: ctms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: background
      app.kubernetes.io/name: ctms
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: background
        app.kubernetes.io/name: ctms
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: ctms
      securityContext:
        null
      containers:
        - name: ctms
          securityContext:
            {}
          image: "497417544945.dkr.ecr.us-west-2.amazonaws.com/ctms:0.0.1"
          command: ["python"]
          args:
            - "ctms/bin/acoustic_sync.py"
          livenessProbe:
            exec:
              command:
              - python3
              - /app/ctms/bin/healthcheck_sync.py
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: ctms/templates/web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctms-web
  labels:
    app.kubernetes.io/component: web
    helm.sh/chart: ctms-0.1.7
    app.kubernetes.io/name: ctms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: web
      app.kubernetes.io/name: ctms
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: ctms
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: ctms
      securityContext:
        null
      containers:
        - name: ctms
          securityContext:
            {}
          image: "497417544945.dkr.ecr.us-west-2.amazonaws.com/ctms:0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /__lbheartbeat__
              port: http
          readinessProbe:
            httpGet:
              path: /__lbheartbeat__
              port: http
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: ctms/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctms
  labels:
    helm.sh/chart: ctms-0.1.7
    app.kubernetes.io/name: ctms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "ctms.mozilla.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ctms
                port:
                  number: 80
---
# Source: ctms/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "ctms-test-connection"
  labels:
    helm.sh/chart: ctms-0.1.7
    app.kubernetes.io/name: ctms
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ['curl']
      args: ['-L', 'ctms:80']
  restartPolicy: Never
